Smartcontract definition & conn.

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/fbaee2798b.js"></script>
+  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+  <script type="text/javascript">
+    // (function(){
+    //     emailjs.init("user_4E92VEYfZTJZEjjwfaXeY");
+    // })();
+  </script>
+
 </body>
 
 </html>
